--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,16 +3,14 @@ version: "3"
 services:
   mysql:
     image: "mysql/mysql-server"
-    restart: 'always'
+    restart: 'no'
     ports:
-      - '${LOCAL_MYSQL_PORT}:3306'
+      - '3306:3306'
     volumes: 
-      - ${LOCAL_MYSQL_DATA_DIR}:${MYSQL_DATA_DIR}
-    env_file:
-      - ${LOCAL_ENV_FILE}
+      - ./persist/data:/var/lib/mysql
     environment:
-      MYSQL_ALLOW_EMPTY_PASSWORD: ${MYSQL_ALLOW_EMPTY_PASSWORD}
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_ALLOW_EMPTY_PASSWORD: 1
+      MYSQL_ROOT_PASSWORD: ''
       MYSQL_ROOT_HOST: '%'
 networks: 
   default: 
